mitigated a total of 201 code quality issues detected by sonarqube
the full list of issues mitigated issues is findable in Groep_6_Code_Quality_Issues.md